syntax = "proto3";

package leader;

import "common.proto";

message LeaderRequest {}

message LeaderResponse {
  common.HostAddress leader_addr = 1;
}

message MemberRequest {}

message Member {
  common.HostAddress member_addr = 1;
  int64 lease_id = 2;
}

message MemberResponse {
  repeated Member members = 1;
}

service LeaderService {
  rpc Leader(LeaderRequest) returns (LeaderResponse);
  rpc Members(MemberRequest) returns (MemberResponse);
}
